# agentic-vault

./: .gitignore  AGENTS.md  AgentPrompts.md  CLAUDE.md  GEMINI.md  HOW_TO_INITIALIZE.md  MEMORY.md  README.md  SKILLS.md  SOUL.md  Setup_Mac.command  Setup_Windows.bat  how to initialize.md  opencode.help.txt  pyproject.toml  requirements.txt
.claude/: README.md  settings.json  settings.local.example.json
.claude/hooks/: pre_tool_use.py
.codex/: README.md  config.toml  file_access_policy.toml
.codex/rules/: vault.rules
.gemini/: settings.json
.github/scripts/: build-zip.sh
.github/workflows/: release.yml
00_Mailbox/: _Mailbox.md
00_Mailbox/Templates/: EmailSummary_TEMPLATE.md  SlackSummary_TEMPLATE.md  SlackThread_TEMPLATE.md
20_Meetings/: _MeetingIndex.md
20_Meetings/Templates/: MeetingNote_TEMPLATE.md
30_Projects/: _Projects.md
30_Projects/Templates/: ProjectSnapshot_TEMPLATE.md
40_People/: _PeopleIndex.md
40_People/Templates/: person_TEMPLATE.md
50_Areas/: Area_TEMPLATE.md  _Areas.md
60_SOPs/Templates/: DailyBrief_TEMPLATE.md  EmailThread_TEMPLATE.md  WeeklyReview_TEMPLATE.md
90_System/Skills/: export_agentic_vault_template.ps1
90_System/TaskQueue/: README.md
_setup/: bootstrap_mac.sh  bootstrap_windows.ps1
_setup/wizard/: google_auth_helper.py  handlers.py  state.py  (+1 more)
src/: wizard_state.json
tests/: test_agent_cli.py  test_src_wizard_agent_cli.py  test_src_wizard_google_auth_helper.py  test_src_wizard_handlers.py  test_src_wizard_server.py  test_src_wizard_state.py  test_src_wizard_validators.py  test_validators.py
(+156 files in other folders)
