[project]
name = "agentic-vault"
version = "0.1.0"
description = "A reusable, Obsidian-friendly vault skeleton for personal operating systems"
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
    "ecmwf-opendata",
    "google-api-python-client>=2.120.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth>=2.25.0",
    "matplotlib>=3.8.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.0",
    "pypdf>=4.1.0",
    "python-docx>=1.1.0",
    "python-pptx",
    "pytrends",
    "reportlab>=4.1.0",
]

[tool.uv]
# Tells uv not to try to build a package metadata out of the vault
package = false

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
